# OLEDTrueType

./: .gitmodules  README.md  sdkconfig  sdkconfig.old
components/freetype/: CMakeLists.txt
components/freetype/include/freetype/: freetype.h
components/freetype/include/freetype/config/: ftstdlib.h
components/graphics/: CMakeLists.txt  ISprite.h  IeSPI.h  SH1122.h
main/: CMakeLists.txt  arduino_main.cpp  binaryttf.h  main.c
